@@ -21,6 +21,6 @@ D(OP_CharacterCreate)
 D(OP_ItemLinkClick)
 D(OP_WhoAllRequest)
 D(OP_ReadBook)
-
+D(OP_FaceChange)
 #undef E
 #undef D
